--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,10 @@
-permissions: write-all
-
 name: CI
 
 on:
  workflow_dispatch:
+
+permissions: 
+ contents: write
 
 jobs:
  build:
@@ -13,8 +14,6 @@ jobs:
    - uses: actions/checkout@v3
    - run: echo "新しい行を追加しました" >> README.txt
 
-   - run: echo add another line
-   - run: echo one more 
    - uses: peter-evans/create-pull-request@v5
      with:
       title: update(test)
